Got some of the google api working

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.tower">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,13 +11,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SpecificTextbook"></activity>
-        <activity android:name=".AddBook"
+        <activity android:name=".GoogleSuggestions"></activity>
+        <activity android:name=".SpecificTextbook" />
+        <activity
+            android:name=".AddBook"
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".ProfileLogin" />
-        <activity android:name=".Profile"
+        <activity
+            android:name=".Profile"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".Search"
+        <activity
+            android:name=".Search"
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".MainActivity">
             <intent-filter>
