--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "29.0.3"
     defaultConfig {
         applicationId "com.example.tower"
-        minSdkVersion 15
+        minSdkVersion 26
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -30,7 +30,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.koushikdutta.ion:ion:2.+'
+    implementation 'com.android.volley:volley:1.1.0'
+    implementation 'com.google.gms:google-services:4.3.3'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
 }
