--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Settings"></activity>
         <activity
             android:name=".AddBookFinal"
-            android:theme="@style/noAnimTheme"/>
+            android:theme="@style/noAnimTheme" />
         <activity
             android:name=".GoogleSuggestions"
             android:theme="@style/noAnimTheme" />
@@ -38,6 +39,7 @@
             android:theme="@style/noAnimTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
