MainActivity now updates grid after refreshing instead of updating automatically. Also made a few small UI tweaks.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,8 @@
             android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".MainActivity"
-            android:theme="@style/noAnimTheme">
+            android:theme="@style/noAnimTheme"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
