Added an account settings feature in the Settings that allows a user to change their email and password.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ConditionDescription"
-            android:theme="@style/noAnimTheme"
-            />
+        <activity android:name=".AccountSettings"></activity>
+        <activity
+            android:name=".ConditionDescription"
+            android:theme="@style/noAnimTheme" />
         <activity android:name=".Settings" />
         <activity
             android:name=".AddBookFinal"
@@ -39,8 +40,7 @@
             android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".MainActivity"
-            android:theme="@style/noAnimTheme"
-            >
+            android:theme="@style/noAnimTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
