--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,7 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.google.gms:google-services:4.3.3'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.joanzapata.pdfview:android-pdfview:1.0.4@aar'
+
 
 }
