--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PasswordReset"></activity>
+        <activity android:name=".EULA"
+            android:theme="@style/noAnimTheme"
+            />
+        <activity android:name=".PrivacyPolicy"
+            android:theme="@style/noAnimTheme"
+            />
+        <activity android:name=".PasswordReset" />
         <activity android:name=".AccountSettings" />
         <activity
             android:name=".ConditionDescription"
